--- a/appIonic/www/index.html
+++ b/appIonic/www/index.html
@@ -25,7 +25,7 @@
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="headcount">
     <ion-nav-view></ion-nav-view>
 
   </body>
