--- a/appIonic/www/index.html
+++ b/appIonic/www/index.html
@@ -22,6 +22,7 @@
     <!-- your app's js -->
     <script src="js/auth.js"></script>
     <script src="js/events.js"></script>
+    <script src="js/accounts.js"></script>
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
   </head>
