adds appCtrl to index.html script

--- a/appIonic/www/index.html
+++ b/appIonic/www/index.html
@@ -20,6 +20,7 @@
 
 
     <!-- your app's js -->
+    <script src="js/appCtrl.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/events.js"></script>
     <script src="js/accounts.js"></script>
