--- a/appIonic/www/index.html
+++ b/appIonic/www/index.html
@@ -13,6 +13,8 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script data-require="angular-messages@1.3.15" data-semver="1.3.15" src="https://code.angularjs.org/1.3.15/angular-messages.js"></script>
+
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
