--- a/appIonic/www/index.html
+++ b/appIonic/www/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' * ws://localhost:35729 ; style-src 'self' 'unsafe-inline'; media-src *;script-src 'self' localhost:35729 'unsafe-eval' 'unsafe-inline';">
+
     <title></title>
 
     <link rel="stylesheet" href="lib/angular-material/angular-material.min.js">
@@ -11,7 +13,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script data-require="angular-messages@1.3.15" data-semver="1.3.15" src="https://code.angularjs.org/1.3.15/angular-messages.js"></script>
+    <script data-require="angular-messages@1.3.15" data-semver="1.3.15" src="lib/angular-messages/angular-messages.min.js"></script>
 
 
     <!-- cordova script (this will be a 404 during development) -->
