--- a/appIonic/www/index.html
+++ b/appIonic/www/index.html
@@ -7,14 +7,16 @@
 
     <title></title>
 
-    <link rel="stylesheet" href="lib/angular-material/angular-material.min.js">
+    <link rel="stylesheet" href="lib/angular-material/angular-material.css">
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script data-require="angular-messages@1.3.15" data-semver="1.3.15" src="lib/angular-messages/angular-messages.min.js"></script>
+    <script src="lib/hammerjs/hammer.js"></script>
 
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    
+    <script data-require="angular-messages@1.3.15" data-semver="1.3.15" src="lib/angular-messages/angular-messages.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -23,7 +25,7 @@
     <script src="lib/angular-animate/angular-animate.min.js"></script>
     <script src="lib/angular-aria/angular-aria.min.js"></script>
     
-    <!--  <script src="lib/angular-material/angular-material.min.js"></script> -->
+    <script src="lib/angular-material/angular-material.js"></script>
 
 
     <!-- your app's js -->
